# Psave

./: .gitignore  Cargo.toml  DEPLOY.md  Dockerfile.server  build_linux.sh
.github/workflows/: build.yml
client/: Cargo.toml  index.html  style.css
client/src/: app.rs  invoke.rs  main.rs
client/src-tauri/: Cargo.toml  base64_icon.txt  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: api.rs  config.rs  lib.rs  main.rs  signaling.rs  transfer.rs  wg_controller.rs
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
