[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_meta = "0.7"
leptos_router = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4"
shared = { path = "../shared" }
uuid = { version = "1.0", features = ["serde", "v4", "js"] }
reqwest = { version = "0.12", features = ["json"] }
