[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
leptos = { version = "0.7", features = ["ssr"] }
leptos_axum = "0.7"
leptos_meta = { version = "0.7", features = ["ssr"] }
leptos_router = { version = "0.7", features = ["ssr"] }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
dashmap = "5.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "postgres", "uuid", "chrono", "time"] }
libsqlite3-sys = { version = "0.27", features = ["bundled"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
bcrypt = "0.15"
jsonwebtoken = "9.2"
thiserror = "1.0"
anyhow = "1.0"
lazy_static = "1.4"

shared = { path = "../shared" }
