[package]
name = "client_app"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
boringtun = "0.6"
tauri-plugin-shell = "2.0"
tun = { version = "0.6", features = ["async"] }
x25519-dalek = { version = "2.0.0-rc.3", features = ["static_secrets", "serde"] }
base64 = "0.21"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
base64-url = "3.0"
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
url = "2.4"
shared = { path = "../../shared" }
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
gethostname = "0.4"
